Tue Sep  2 21:51:34 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garrem.ads: Added an Exchange_Launcher procedure as well as a
	  Local_Launcher. Exported Rsh_Launcher in the spec.

	* s-garrem.adb: Implemented what is described below.

Fri Aug 29 20:58:30 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpcpoo.adb: Use new flag to avoid starting the whole runtime
	  when a partition has no RCI receiver and no RACW.

Fri Aug 29 20:17:26 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garopt.ads: Add a new flag Has_RCI_Pkg_Or_RACW_Var (default is
	true). This flag is set to false when no RCI is configured on this
	partition and when no RACW can possibly be declared.

Thu Aug 28 19:16:46 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (GNATFLAGS): Removed -gnatdj.

Wed Aug 27 17:00:09 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garuti.ads: (Raise_With_Errno, Raise_Communication_Error): New
	  procedures.

	* s-gartcp.adb: Use them.

	* Makefile.am: Makefile depends on Makefile.fil, not Makefile.in.

Thu Aug 14 12:58:40 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartra.adb: Added a constant.

Wed Aug 13 16:11:03 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartra.adb: Remove the length of each entry from the trace
	  file since using 'Output and 'Input instead of 'Write and 'Read
	  will make this automatically.

Tue Aug 12 13:08:31 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: Use libtool to compile files and generate shared
	  library as well. Extract duplicate symbols from libgnat.a.

Fri Jun  6 15:30:43 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-stratt.adb: Changed 2**8 - 1 into 16#FF# to prevent
	  (letigimate) error on VMS.

Wed Jun  4 18:00:57 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gafizi.adb: Replaced pragma Elaborate by pragma Elaborate_All
	  since it makes no sense to elaborate only one of the needed
	  packages.

Thu May 29 17:30:14 1997  Samuel Tardieu  <sam@inf.enst.fr>
